fixed shift layout

--- a/src/sass/Footer.scss
+++ b/src/sass/Footer.scss
@@ -36,7 +36,7 @@ footer {
     }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 860px) {
     footer {
         padding: 4rem 2.5rem 3rem;
         display: inline-block;
