--- a/src/sass/Hero.scss
+++ b/src/sass/Hero.scss
@@ -1,5 +1,8 @@
 @import "Variables";
 
+
+
+
 div {
   .content-container {
     position: absolute;
@@ -37,6 +40,8 @@ div {
       object-fit: cover;
     }
   }
+
+  
 }
 
 .header {
@@ -51,7 +56,7 @@ div {
   }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 860px) {
   .hero {
     width: 100%;
     .content-container {
@@ -110,8 +115,10 @@ div {
     }
   }
 
-  .hero-img--size img {
-    object-fit: cover;
+  div .hero-img--size {
     height: 37.5rem;
+    img {
+      object-fit: cover;
+    }
   }
 }
