--- a/src/sass/Navbar.scss
+++ b/src/sass/Navbar.scss
@@ -130,7 +130,7 @@
   }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 860px) {
 
   .nav-container {
     
