--- a/src/sass/ProductDetails.scss
+++ b/src/sass/ProductDetails.scss
@@ -86,7 +86,7 @@
   }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 860px) {
   .component-product-details {
     width: 43rem;
     margin: initial;
