--- a/src/sass/ProductLeftLink.scss
+++ b/src/sass/ProductLeftLink.scss
@@ -43,7 +43,7 @@
     }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 860px) {
 
     .component-product-left-link {
         margin: 7.5rem 2.5rem;
