--- a/src/sass/ProductSection.scss
+++ b/src/sass/ProductSection.scss
@@ -155,7 +155,7 @@ section {
     }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 860px) {
 
     .product-section {
         margin: initial;
